# costas-loop-lab

./: README.md  pyproject.toml
assets/: qpsk-alias-limit-map.csv  qpsk-coarse-prefix-budget.csv
costaslab/: __init__.py  analysis.py  cli.py  loop.py  render.py  signal.py
notebooks/: alias_limit_and_false_clean_metric.ipynb  coarse_prefix_budget.ipynb  frequency_acquisition_and_pull_in.ipynb
reports/: qpsk-alias-limit.md  qpsk-carrier-recovery.md  qpsk-coarse-prefix-budget.md  qpsk-frequency-acquisition.md  qpsk-loop-gain-tradeoffs.md
scripts/: generate_gallery.py
tests/: test_costas.py
