[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "costas-loop-lab"
version = "0.1.0"
description = "A tiny pure-Python lab for coarse QPSK carrier acquisition and Costas-loop tracking."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Jarbas"}]
license = {text = "MIT"}

[tool.setuptools]
packages = ["costaslab"]
